--- a/Problema/home.html
+++ b/Problema/home.html
@@ -173,7 +173,7 @@
 				<p class="prec mtop">$218.00</p>
 			</div>
 		</div>
-		<div class="row bgi">
+		<div class="row bg">
 			<div class="col-md-2">
 				<div class="cli">
 					<img src="assets/images/client1.jpg" class="ima">
